# TodoApp

./: .gitignore  ARCHITECTURE.md  Caddyfile  Info.md  PROJECT_SUMMARY.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-images.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6ac76d97f655_create_users_and_todos_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  todos.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: todo.py  user.py
backend/app/repositories/: todo_repository.py  user_repository.py
backend/app/schemas/: todo.py  token.py  user.py
backend/app/services/: auth_service.py  todo_service.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_auth.py  test_todos.py
frontend/: .dockerignore  Dockerfile  TAILWIND_CHEATSHEET.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/todos/: page.tsx
frontend/src/components/: Doodles.tsx  Nav.tsx  ThemeToggle.tsx  TodoItem.tsx  icons.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
